@@ -343,7 +343,7 @@ class sudoku:
 				self.model.Add(sumVars[i] != mySumVar).OnlyEnforceIf(compVars[2])
 				self.model.AddBoolOr(compVars)
 				
-	from ._globalConstraints import setXSudokuMain,setXSudokuOff,setBentDiagonals,setAntiDiagonalMain,setAntiDiagonalOff,setMagnitudeMirrorMain,setMagnitudeMirrorOff,setMagnitudeAntiMirrorMain,setMagnitudeAntiMirrorOff,setParityMirrorMain,setParityMirrorOff,setEntropyMirrorMain,setEntropyMirrorOff,setEntropyAntiMirrorMain,setEntropyAntiMirrorOff,setPrimalityMirrorMain,setPrimalityMirrorOff,setPrimalityAntiMirrorMain,setPrimalityAntiMirrorOff,setAntiKing,setAntiKnight,setKnightMare,setGeneralizedKnightMare,setDisjointGroups,setNonConsecutive,setWindoku,_setIndexCell,_setNonIndexCell,setIndexRow,setIndexColumn,setGlobalWhispers,setCloseNeighbors,setCloseNeighbours,setGlobalNeighborSum,setGlobalNeighbourSum,setGlobalEntropy,setGlobalModular,setQuadro,setUnicornDigit,setRepellingDigit,setAntiQueenDigit,setGSP,setRotationalPairs,setNoThreeInARowParity,setIsotopic,setNoConsecutiveSum,setNoSeven,setCountingCircles,setOffsetDigit,setFlatMates,setDutchFlatMates,setPool
+	from ._globalConstraints import setXSudokuMain,setXSudokuOff,setBentDiagonals,setAntiDiagonalMain,setAntiDiagonalOff,setMagnitudeMirrorMain,setMagnitudeMirrorOff,setMagnitudeAntiMirrorMain,setMagnitudeAntiMirrorOff,setParityMirrorMain,setParityMirrorOff,setEntropyMirrorMain,setEntropyMirrorOff,setEntropyAntiMirrorMain,setEntropyAntiMirrorOff,setPrimalityMirrorMain,setPrimalityMirrorOff,setPrimalityAntiMirrorMain,setPrimalityAntiMirrorOff,setAntiKing,setAntiKnight,setKnightMare,setGeneralizedKnightMare,setDisjointGroups,setNonConsecutive,setWindoku,_setIndexCell,_setNonIndexCell,setIndexRow,setIndexColumn,setGlobalWhispers,setCloseNeighbors,setCloseNeighbours,setGlobalNeighborSum,setGlobalNeighbourSum,setGlobalEntropy,setGlobalModular,setQuadro,setUnicornDigit,setRepellingDigit,setAntiQueenDigit,setGSP,setRotationalPairs,setNoThreeInARowParity,setIsotopic,setNoConsecutiveSum,setNoSeven,setCountingCircles,setOffsetDigit,setFlatMates,setDutchFlatMates,setPool,setBattleships
 	
 	from ._singleCell import setGiven,setGivenArray,setMinMaxCell,setMinCell,setMaxCell,setMinMaxArray,setMaxMinArray,setMinArray,setMaxArray,setEvenOdd,setOddEven,setEven,setOdd,setEvenArray,setOddArray,setEvenOddArray,setOddEvenArray,setNeighborSum,setNeighbourSum,setNeighborSumArray,setNeighbourSumArray,setFriendly,setFriendlyArray,setUnfriendly,setUnfriendlyArray,setFriendlyNegative,_applyFriendlyNegative,setScary,setPencilmarks,setPencilmarksArray,setSearchNine,setLogicBomb,assertNumberOfLogicBombs,setCupid,setNearestNeighbor,setNearestNeighbour,setDifferentNeighbors,setDifferentNeighbours,setSlingshot,_initializeNeighborSet,_setNeighborSetBase,setPosNeighborSet,setPosNeighbourSet,setNegNeighborSet,setNegNeighbourSet,setPosNeighborSetArray,setPosNeighbourSetArray,setNegNeighborSetArray,setNegNeighbourSetArray,setNeighborSetArray,setNeighbourSetArray,setNeighborSetProperty,setNeighbourSetProperty,setNeighborSetNegative,setNeighbourSetNegative,_applyNeighborSetNegative,setRemoteClone,setRepeatedNeighbors,setRepeatedNeighbours,setRepeatedNeighborsArray,setRepeatedNeighboursArray,setDistinctNeighbors,setDistinctNeighbours,setDistinctNeighborsArray,setDistinctNeighboursArray,setRepeatedNeighborsNegative,setRepeatedNeighboursNegative,_applyRepeatedNeighborsNegative,setConditionalCountCross
 	
